# OpenGL-Template

./: CMakeLists.txt  README.md  run.sh
inc/: log.h
src/: log.cpp  main.cpp
